[package]
name = "EternalRust"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14", features = ["wgpu", "tokio", "advanced", "image"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.15"
tokio = { version = "1.48", features = ["rt", "rt-multi-thread"] }
rand = "0.8"
thiserror = "2.0"
libc = "0.2"
log = "0.4"
iced_aw = { version = "0.13", default-features = false, features = ["card"] }
chrono = "0.4"
sha2 = "0.10"

[build-dependencies]
ico = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
winres = "0.1"
